--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = ">=3.13,<3.14"
 streamlit = "^1.35.0"
 altair = "^5.3.0"
 pandas = "^2.2.2"
+pymupdf = "^1.26.6"
 
 
 [tool.poetry.group.dev.dependencies]
